k8s/todos-service.yaml
# k8s/todos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-service
  namespace: microservices
  labels:
    app: todos-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: todos-service
